@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 11:30:49 nia Exp $
-
-BLAKE2s (tryton-4.2/trytond_webdav-4.2.0.tar.gz) = 29f061f6de10119591e443a85f729d0f0347ed5dc7ddc754f73398ac8dbb9640
-SHA512 (tryton-4.2/trytond_webdav-4.2.0.tar.gz) = ad437af4131248d38fbbec2a490bd90ef399d31aa3ca77abd180c9da0171f2f13b1c79f4032741ff2cda2450e43fe8decf83b48547f35757a0872cbd29f047bc
-Size (tryton-4.2/trytond_webdav-4.2.0.tar.gz) = 36199 bytes
